// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AddUser > should render correctly when there are no inputs 1`] = `
<DocumentFragment>
  <div
    class="govuk-phase-banner max-w-[960px] w-[90%] border-0 mx-auto app-phase-banner app-width-container"
  >
    <p
      class="govuk-phase-banner__content"
    >
      <strong
        class="govuk-tag govuk-phase-banner__content__tag"
      >
        Beta
      </strong>
      <span
        class="govuk-phase-banner__text"
      >
        This is a new service. Help us improve it and 
        <a
          class="govuk-link"
          href="/feedback"
          id="feedback-link"
        >
          give your feedback (opens in new tab)
        </a>
        .
      </span>
    </p>
  </div>
  <div
    class="govuk-width-container"
  >
    <button
      class="govuk-back-link mb-7"
      type="button"
    >
      Back
    </button>
    <main
      class="govuk-main-wrapper"
      id="main-content"
    >
      <div
        class="govuk-grid-row"
      >
        <div
          class="govuk-grid-column-two-thirds"
        >
          <form
            action="/api/admin/add-user"
            method="post"
          >
            <input
              name="csrf_token"
              type="hidden"
              value=""
            />
            <h1
              class="govuk-heading-xl"
            >
              Add new user
            </h1>
            <div
              class="govuk-form-group"
            >
              <div
                class="govuk-form-group"
                id="given-name"
              >
                <label
                  class="govuk-label govuk-label--s"
                  for="given-name-input"
                >
                  First name
                </label>
                <div
                  class=""
                >
                  <input
                    class="govuk-input w"
                    id="given-name-input"
                    maxlength="100"
                    name="givenName"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="govuk-form-group"
            >
              <div
                class="govuk-form-group"
                id="family-name"
              >
                <label
                  class="govuk-label govuk-label--s"
                  for="family-name-input"
                >
                  Last name
                </label>
                <div
                  class=""
                >
                  <input
                    class="govuk-input w"
                    id="family-name-input"
                    maxlength="100"
                    name="familyName"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="govuk-form-group"
            >
              <div
                class="govuk-form-group"
                id="email"
              >
                <label
                  class="govuk-label govuk-label--s"
                  for="email-input"
                >
                  Email address
                </label>
                <div
                  class=""
                >
                  <input
                    class="govuk-input w"
                    id="email-input"
                    maxlength="100"
                    name="email"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <table
              class="govuk-table"
            >
              <thead
                class="govuk-table__head"
              >
                <tr
                  class="govuk-table__row"
                />
              </thead>
              <tbody
                class="govuk-table__body"
              >
                <tr
                  class="govuk-table__row"
                >
                  <th
                    class="govuk-table__header align-middle"
                    scope="row"
                  >
                    Organisation
                  </th>
                  <td
                    class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                  />
                  <td
                    class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                  />
                </tr>
              </tbody>
            </table>
            <div
              class="govuk-form-group"
            >
              <fieldset
                class="govuk-fieldset"
                id="group"
              >
                <legend
                  class="govuk-fieldset__legend"
                >
                  <span
                    class="govuk-heading-s govuk-!-margin-bottom-0"
                  >
                    What account do they require?
                  </span>
                </legend>
                <div
                  class=""
                >
                  <div
                    class="govuk-radios"
                    data-module="govuk-radios"
                  >
                    <div
                      class="govuk-radios__item govuk-!-margin-bottom-1"
                    >
                      <input
                        class="govuk-radios__input"
                        data-aria-controls="group-org-admins-conditional"
                        id="group-org-admins"
                        name="group"
                        type="radio"
                        value="org-admins"
                      />
                      <label
                        class="govuk-label govuk-radios__label"
                        for="group-org-admins"
                      >
                        Admin
                      </label>
                    </div>
                    <div
                      class="govuk-radios__item govuk-!-margin-bottom-1"
                    >
                      <input
                        class="govuk-radios__input"
                        data-aria-controls="group-org-publishers-conditional"
                        id="group-org-publishers"
                        name="group"
                        type="radio"
                        value="org-publishers"
                      />
                      <label
                        class="govuk-label govuk-radios__label"
                        for="group-org-publishers"
                      >
                        Publisher
                      </label>
                    </div>
                    <div
                      class="govuk-radios__item govuk-!-margin-bottom-1"
                    >
                      <input
                        class="govuk-radios__input"
                        data-aria-controls="group-org-staff-conditional"
                        id="group-org-staff"
                        name="group"
                        type="radio"
                        value="org-staff"
                      />
                      <label
                        class="govuk-label govuk-radios__label"
                        for="group-org-staff"
                      >
                        Staff
                      </label>
                    </div>
                    <div
                      class="govuk-radios__item"
                    >
                      <input
                        class="govuk-radios__input"
                        data-aria-controls="group-operators-conditional"
                        id="group-operators"
                        name="group"
                        type="radio"
                        value="operators"
                      />
                      <label
                        class="govuk-label govuk-radios__label"
                        for="group-operators"
                      >
                        Operator
                      </label>
                    </div>
                  </div>
                </div>
              </fieldset>
            </div>
            <button
              class="govuk-button mt-8 mr-5"
              data-module="govuk-button"
            >
              Send invitation
            </button>
            <a
              class="govuk-button mt-8 govuk-button--secondary"
              href="/admin/user-management"
              role="button"
            >
              Cancel
            </a>
          </form>
        </div>
      </div>
    </main>
    <div>
      <h2
        class="govuk-heading-s"
      >
        Help and Support
      </h2>
      <p
        class="govuk-body"
      >
        If you are having problems, please contact the Create Disruption Service via this link: 
        <a
          class="govuk-link govuk-!-font-size-19"
          href="/contact"
        >
          Contact us
        </a>
      </p>
    </div>
  </div>
  <footer
    class="govuk-footer"
    role="contentinfo"
  >
    <div
      class="govuk-width-container"
    >
      <div
        class="govuk-footer__meta"
      >
        <div
          class="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <h2
            class="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            class="govuk-footer__inline-list"
          >
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Help
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/cookies"
              >
                Cookies
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Contact
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/accessibility"
              >
                Accessibility
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="https://www.gov.uk/help/terms-conditions"
              >
                Terms and conditions
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/privacy"
              >
                Privacy
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/changelog"
              >
                Service changelog
              </a>
            </li>
          </ul>
          <p
            class="govuk-footer__body"
          >
            Built by the 
            <a
              class="govuk-footer__link"
              href="https://www.gov.uk/government/organisations/department-for-transport"
              rel="noreferrer"
              target="_blank"
            >
              Department for Transport
            </a>
          </p>
          <svg
            aria-hidden="true"
            class="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            class="govuk-footer__licence-description"
          >
            All content is available under the 
            <a
              class="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              rel="license"
            >
              Open Government Licence v3.0
            </a>
            , except where otherwise stated
          </span>
        </div>
        <div
          class="govuk-footer__meta-item"
        >
          <a
            class="govuk-footer__link govuk-footer__copyright-logo bg-govuk-crest"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
          >
            © Crown copyright
          </a>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`AddUser > should render correctly with inputs 1`] = `
<DocumentFragment>
  <div
    class="govuk-phase-banner max-w-[960px] w-[90%] border-0 mx-auto app-phase-banner app-width-container"
  >
    <p
      class="govuk-phase-banner__content"
    >
      <strong
        class="govuk-tag govuk-phase-banner__content__tag"
      >
        Beta
      </strong>
      <span
        class="govuk-phase-banner__text"
      >
        This is a new service. Help us improve it and 
        <a
          class="govuk-link"
          href="/feedback"
          id="feedback-link"
        >
          give your feedback (opens in new tab)
        </a>
        .
      </span>
    </p>
  </div>
  <div
    class="govuk-width-container"
  >
    <button
      class="govuk-back-link mb-7"
      type="button"
    >
      Back
    </button>
    <main
      class="govuk-main-wrapper"
      id="main-content"
    >
      <div
        class="govuk-grid-row"
      >
        <div
          class="govuk-grid-column-two-thirds"
        >
          <form
            action="/api/admin/add-user"
            method="post"
          >
            <input
              name="csrf_token"
              type="hidden"
              value=""
            />
            <h1
              class="govuk-heading-xl"
            >
              Add new user
            </h1>
            <div
              class="govuk-form-group"
            >
              <div
                class="govuk-form-group"
                id="given-name"
              >
                <label
                  class="govuk-label govuk-label--s"
                  for="given-name-input"
                >
                  First name
                </label>
                <div
                  class=""
                >
                  <input
                    class="govuk-input w"
                    id="given-name-input"
                    maxlength="100"
                    name="givenName"
                    type="text"
                    value="dummy"
                  />
                </div>
              </div>
            </div>
            <div
              class="govuk-form-group"
            >
              <div
                class="govuk-form-group"
                id="family-name"
              >
                <label
                  class="govuk-label govuk-label--s"
                  for="family-name-input"
                >
                  Last name
                </label>
                <div
                  class=""
                >
                  <input
                    class="govuk-input w"
                    id="family-name-input"
                    maxlength="100"
                    name="familyName"
                    type="text"
                    value="user"
                  />
                </div>
              </div>
            </div>
            <div
              class="govuk-form-group"
            >
              <div
                class="govuk-form-group"
                id="email"
              >
                <label
                  class="govuk-label govuk-label--s"
                  for="email-input"
                >
                  Email address
                </label>
                <div
                  class=""
                >
                  <input
                    class="govuk-input w"
                    id="email-input"
                    maxlength="100"
                    name="email"
                    type="text"
                    value="dummy.user@gmail.com"
                  />
                </div>
              </div>
            </div>
            <table
              class="govuk-table"
            >
              <thead
                class="govuk-table__head"
              >
                <tr
                  class="govuk-table__row"
                />
              </thead>
              <tbody
                class="govuk-table__body"
              >
                <tr
                  class="govuk-table__row"
                >
                  <th
                    class="govuk-table__header align-middle"
                    scope="row"
                  >
                    Organisation
                  </th>
                  <td
                    class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                  />
                  <td
                    class="govuk-table__cell align-middle overflow-hidden px-2 max-w-2xl "
                  />
                </tr>
              </tbody>
            </table>
            <div
              class="govuk-form-group"
            >
              <fieldset
                class="govuk-fieldset"
                id="group"
              >
                <legend
                  class="govuk-fieldset__legend"
                >
                  <span
                    class="govuk-heading-s govuk-!-margin-bottom-0"
                  >
                    What account do they require?
                  </span>
                </legend>
                <div
                  class=""
                >
                  <div
                    class="govuk-radios"
                    data-module="govuk-radios"
                  >
                    <div
                      class="govuk-radios__item govuk-!-margin-bottom-1"
                    >
                      <input
                        checked=""
                        class="govuk-radios__input"
                        data-aria-controls="group-org-admins-conditional"
                        id="group-org-admins"
                        name="group"
                        type="radio"
                        value="org-admins"
                      />
                      <label
                        class="govuk-label govuk-radios__label"
                        for="group-org-admins"
                      >
                        Admin
                      </label>
                    </div>
                    <div
                      class="govuk-radios__item govuk-!-margin-bottom-1"
                    >
                      <input
                        class="govuk-radios__input"
                        data-aria-controls="group-org-publishers-conditional"
                        id="group-org-publishers"
                        name="group"
                        type="radio"
                        value="org-publishers"
                      />
                      <label
                        class="govuk-label govuk-radios__label"
                        for="group-org-publishers"
                      >
                        Publisher
                      </label>
                    </div>
                    <div
                      class="govuk-radios__item govuk-!-margin-bottom-1"
                    >
                      <input
                        class="govuk-radios__input"
                        data-aria-controls="group-org-staff-conditional"
                        id="group-org-staff"
                        name="group"
                        type="radio"
                        value="org-staff"
                      />
                      <label
                        class="govuk-label govuk-radios__label"
                        for="group-org-staff"
                      >
                        Staff
                      </label>
                    </div>
                    <div
                      class="govuk-radios__item"
                    >
                      <input
                        class="govuk-radios__input"
                        data-aria-controls="group-operators-conditional"
                        id="group-operators"
                        name="group"
                        type="radio"
                        value="operators"
                      />
                      <label
                        class="govuk-label govuk-radios__label"
                        for="group-operators"
                      >
                        Operator
                      </label>
                    </div>
                  </div>
                </div>
              </fieldset>
            </div>
            <button
              class="govuk-button mt-8 mr-5"
              data-module="govuk-button"
            >
              Send invitation
            </button>
            <a
              class="govuk-button mt-8 govuk-button--secondary"
              href="/admin/user-management"
              role="button"
            >
              Cancel
            </a>
          </form>
        </div>
      </div>
    </main>
    <div>
      <h2
        class="govuk-heading-s"
      >
        Help and Support
      </h2>
      <p
        class="govuk-body"
      >
        If you are having problems, please contact the Create Disruption Service via this link: 
        <a
          class="govuk-link govuk-!-font-size-19"
          href="/contact"
        >
          Contact us
        </a>
      </p>
    </div>
  </div>
  <footer
    class="govuk-footer"
    role="contentinfo"
  >
    <div
      class="govuk-width-container"
    >
      <div
        class="govuk-footer__meta"
      >
        <div
          class="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <h2
            class="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            class="govuk-footer__inline-list"
          >
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Help
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/cookies"
              >
                Cookies
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Contact
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/accessibility"
              >
                Accessibility
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="https://www.gov.uk/help/terms-conditions"
              >
                Terms and conditions
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/privacy"
              >
                Privacy
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/changelog"
              >
                Service changelog
              </a>
            </li>
          </ul>
          <p
            class="govuk-footer__body"
          >
            Built by the 
            <a
              class="govuk-footer__link"
              href="https://www.gov.uk/government/organisations/department-for-transport"
              rel="noreferrer"
              target="_blank"
            >
              Department for Transport
            </a>
          </p>
          <svg
            aria-hidden="true"
            class="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            class="govuk-footer__licence-description"
          >
            All content is available under the 
            <a
              class="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              rel="license"
            >
              Open Government Licence v3.0
            </a>
            , except where otherwise stated
          </span>
        </div>
        <div
          class="govuk-footer__meta-item"
        >
          <a
            class="govuk-footer__link govuk-footer__copyright-logo bg-govuk-crest"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
          >
            © Crown copyright
          </a>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;
